[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mimo-symbolic-regression"
version = "0.1.0"
description = "Multiple Input Multiple Output Symbolic Regression in Python"
authors = [
  { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "numpy>=1.21",
  "matplotlib>=3.4",
  "numba>=0.55",
  "datasets>=3.1.0",
  "scikit-learn>=1.3.2",
  "pip>=25.0.1",
  "sympy>=1.13.3",
  "scipy-stubs==1.16.0.2",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "gprof2dot",
  "black"
]

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
example-usage = "examples.example_usage:main"
